--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -49,6 +49,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88eebab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'titanic.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexpress\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpx\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtitanic.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# ---------- Exercise 1: Survival Patterns ----------\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msurvivalDemographics\u001b[39m(df: pd\u001b[38;5;241m.\u001b[39mDataFrame) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame:\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# Make age groups\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\aiden\\OneDrive\\Documents\\Anaconda\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1026\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m   1013\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m   1014\u001b[0m     dialect,\n\u001b[0;32m   1015\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1022\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[0;32m   1023\u001b[0m )\n\u001b[0;32m   1024\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m-> 1026\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
+      "File \u001b[1;32mc:\\Users\\aiden\\OneDrive\\Documents\\Anaconda\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:620\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    617\u001b[0m _validate_names(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    619\u001b[0m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[1;32m--> 620\u001b[0m parser \u001b[38;5;241m=\u001b[39m TextFileReader(filepath_or_buffer, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[0;32m    622\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[0;32m    623\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
+      "File \u001b[1;32mc:\\Users\\aiden\\OneDrive\\Documents\\Anaconda\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1620\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m   1617\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m   1619\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles: IOHandles \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m-> 1620\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_make_engine(f, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mengine)\n",
+      "File \u001b[1;32mc:\\Users\\aiden\\OneDrive\\Documents\\Anaconda\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1880\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[1;34m(self, f, engine)\u001b[0m\n\u001b[0;32m   1878\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode:\n\u001b[0;32m   1879\u001b[0m         mode \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1880\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;241m=\u001b[39m get_handle(\n\u001b[0;32m   1881\u001b[0m     f,\n\u001b[0;32m   1882\u001b[0m     mode,\n\u001b[0;32m   1883\u001b[0m     encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[0;32m   1884\u001b[0m     compression\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcompression\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[0;32m   1885\u001b[0m     memory_map\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmemory_map\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m),\n\u001b[0;32m   1886\u001b[0m     is_text\u001b[38;5;241m=\u001b[39mis_text,\n\u001b[0;32m   1887\u001b[0m     errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding_errors\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstrict\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m   1888\u001b[0m     storage_options\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstorage_options\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[0;32m   1889\u001b[0m )\n\u001b[0;32m   1890\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1891\u001b[0m f \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles\u001b[38;5;241m.\u001b[39mhandle\n",
+      "File \u001b[1;32mc:\\Users\\aiden\\OneDrive\\Documents\\Anaconda\\Lib\\site-packages\\pandas\\io\\common.py:873\u001b[0m, in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    868\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(handle, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m    869\u001b[0m     \u001b[38;5;66;03m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[0;32m    870\u001b[0m     \u001b[38;5;66;03m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[0;32m    871\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mencoding \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mmode:\n\u001b[0;32m    872\u001b[0m         \u001b[38;5;66;03m# Encoding\u001b[39;00m\n\u001b[1;32m--> 873\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\n\u001b[0;32m    874\u001b[0m             handle,\n\u001b[0;32m    875\u001b[0m             ioargs\u001b[38;5;241m.\u001b[39mmode,\n\u001b[0;32m    876\u001b[0m             encoding\u001b[38;5;241m=\u001b[39mioargs\u001b[38;5;241m.\u001b[39mencoding,\n\u001b[0;32m    877\u001b[0m             errors\u001b[38;5;241m=\u001b[39merrors,\n\u001b[0;32m    878\u001b[0m             newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    879\u001b[0m         )\n\u001b[0;32m    880\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    881\u001b[0m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[0;32m    882\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(handle, ioargs\u001b[38;5;241m.\u001b[39mmode)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'titanic.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "# ---------- Exercise 1: Survival Patterns ----------\n",
+    "\n",
+    "def survivalDemographics(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Make age groups\n",
+    "    bins = [-1, 12, 19, 59, 120]\n",
+    "    labels = [\"Child (0–12)\", \"Teen (13–19)\", \"Adult (20–59)\", \"Senior (60+)\"]\n",
+    "    df = df.copy()\n",
+    "    df[\"age_group\"] = pd.cut(df[\"Age\"], bins=bins, labels=labels)\n",
+    "\n",
+    "    # Group and aggregate\n",
+    "    grouped = (\n",
+    "        df.dropna(subset=[\"age_group\"])\n",
+    "          .groupby([\"Pclass\", \"Sex\", \"age_group\"])\n",
+    "          .agg(\n",
+    "              n_passengers=(\"Survived\", \"size\"),\n",
+    "              n_survivors=(\"Survived\", \"sum\")\n",
+    "          )\n",
+    "          .reset_index()\n",
+    "    )\n",
+    "    grouped[\"survival_rate\"] = grouped[\"n_survivors\"] / grouped[\"n_passengers\"]\n",
+    "    return grouped\n",
+    "\n",
+    "\n",
+    "def visualizeDemographic(summary: pd.DataFrame):\n",
+    "    fig = px.bar(\n",
+    "        summary,\n",
+    "        x=\"age_group\",\n",
+    "        y=\"survival_rate\",\n",
+    "        color=\"Sex\",\n",
+    "        facet_col=\"Pclass\",\n",
+    "        barmode=\"group\",\n",
+    "        text=summary[\"survival_rate\"].apply(lambda x: f\"{x:.0%}\")\n",
+    "    )\n",
+    "    fig.update_yaxes(tickformat=\".0%\")\n",
+    "    return fig"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3e8a0793",
    "metadata": {},
@@ -78,6 +139,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "263148ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---------- Exercise 2: Family Size and Wealth ----------\n",
+    "\n",
+    "def familyGroups(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df = df.copy()\n",
+    "    df[\"family_size\"] = df[\"SibSp\"].fillna(0) + df[\"Parch\"].fillna(0) + 1\n",
+    "\n",
+    "    grouped = (\n",
+    "        df.groupby([\"family_size\", \"Pclass\"])\n",
+    "          .agg(\n",
+    "              n_passengers=(\"Fare\", \"size\"),\n",
+    "              avg_fare=(\"Fare\", \"mean\"),\n",
+    "              min_fare=(\"Fare\", \"min\"),\n",
+    "              max_fare=(\"Fare\", \"max\")\n",
+    "          )\n",
+    "          .reset_index()\n",
+    "    )\n",
+    "    return grouped\n",
+    "\n",
+    "\n",
+    "def lastNames(df: pd.DataFrame) -> pd.Series:\n",
+    "    last = df[\"Name\"].astype(str).str.split(\",\", n=1).str[0].str.strip()\n",
+    "    return last.value_counts()\n",
+    "\n",
+    "\n",
+    "def visualizeFamilies(summary: pd.DataFrame):\n",
+    "    fig = px.line(\n",
+    "        summary,\n",
+    "        x=\"family_size\",\n",
+    "        y=\"avg_fare\",\n",
+    "        color=\"Pclass\",\n",
+    "        markers=True,\n",
+    "        hover_data=[\"min_fare\", \"max_fare\", \"n_passengers\"]\n",
+    "    )\n",
+    "    return fig"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fd60f1c3",
    "metadata": {},
@@ -94,10 +198,49 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "496069f5",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8a5b7255",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# ---------- Bonus: Age Division by Class Median ----------\n",
+    "\n",
+    "def determineAgeDivision(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df = df.copy()\n",
+    "    class_medians = df.groupby(\"Pclass\")[\"Age\"].median()\n",
+    "    df[\"older_passenger\"] = df.apply(\n",
+    "        lambda row: row[\"Age\"] > class_medians[row[\"Pclass\"]]\n",
+    "        if pd.notnull(row[\"Age\"]) else None,\n",
+    "        axis=1\n",
+    "    )\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def visualizeAgeDivision(df: pd.DataFrame):\n",
+    "    grouped = (\n",
+    "        df.dropna(subset=[\"older_passenger\"])\n",
+    "          .groupby([\"Pclass\", \"Sex\", \"older_passenger\"])\n",
+    "          .agg(\n",
+    "              n_passengers=(\"Survived\", \"size\"),\n",
+    "              n_survivors=(\"Survived\", \"sum\")\n",
+    "          )\n",
+    "          .reset_index()\n",
+    "    )\n",
+    "    grouped[\"survival_rate\"] = grouped[\"n_survivors\"] / grouped[\"n_passengers\"]\n",
+    "\n",
+    "    fig = px.bar(\n",
+    "        grouped,\n",
+    "        x=\"Sex\",\n",
+    "        y=\"survival_rate\",\n",
+    "        color=\"older_passenger\",\n",
+    "        facet_col=\"Pclass\",\n",
+    "        barmode=\"group\",\n",
+    "        text=grouped[\"survival_rate\"].apply(lambda x: f\"{x:.0%}\")\n",
+    "    )\n",
+    "    fig.update_yaxes(tickformat=\".0%\")\n",
+    "    return fig\n"
+   ]
   }
  ],
  "metadata": {
@@ -116,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
